--- a/Index.html
+++ b/Index.html
@@ -126,7 +126,7 @@
                              var xValues = ["Cabbage", "Chinese Cabbage", "Lettuce", "Cauliflower", "Snap beans", 
                              "Garden peas", "Sweet Pepper", "White Potato", "Carrots"];
                             var yValues = [55, 49, 44, 35, 24, 20, 17, 15, 13];
-                            var barColors = "white";
+                            var barColors = "gray";
                             
                             new Chart("myChart", {
                               type: "bar",
