--- a/Index.html
+++ b/Index.html
@@ -85,6 +85,9 @@
 
     <div class="Contents">
         <div class="HomeContents">
+            <div class="feeler-weather">
+                <h1>WEATHER FORECAST</h1>
+            </div>
             <!--Weather Widget-->
             <div class="WeatherSection">
                 <div class="card">
@@ -147,17 +150,18 @@
                                   text: "Top 10 HIGHLAND CROPS"
                                 }
                               }
+
                             });
                             </script>
                     </div>
             </div>
         </div>
 
-
+        <div class="feeler-crops">
+            <h1>HIGHLAND CROPS</h1>
+        </div>
         <div class="CropsContent" id="CropsID">
             <div class="HighlandCrops">
-                <h2>Highland Crops</h2>
-
                 <div class='VegsMenu'>
                     <ul id="VegsList">
                         <li><a href="#CropsID"><span class="Vlist">Cabbage</span></a></li>
