--- a/Index.html
+++ b/Index.html
@@ -69,7 +69,6 @@
             <li><a href="#SeasonsID" class="MMlist">Seasons</a></li>
             <li><a href="#MunicipalitiesID" class="MMlist">Municipalities</a></li>
             <li><a href="#GISID" class="MMlist">GIS</a></li>
-            <li><a href="#DatasetsID" class="MMlist">Datasets</a></li>
         </ul>
      </div>
     </nav>
@@ -111,9 +110,9 @@
                 </div>
                 </div>
                 <div class="right">
-                    <img src="Images/weather.jpg" width="570vw" height="400vh">
+                    <img src="Images/Baguio.png" width="600vw" height="550vh">
                 </div>
-        </div>
+        </div>  
 
         <!--Crops-->
         <div class="feeler-crops" id="CropsID">
@@ -260,30 +259,13 @@
         <div class="GIS">
         </div>
 
+        <div class="footer">
+            <p>© Project ANI 2021</p>
+            <p>Made by the CITCS team</p>
+            <a href="#">Admin Login</a>
+            <p>Images and Videos from Google</p>
+        </div>
 
-        <!--Dataset-->
-        <div class="feeler-dataset" id="DatasetsID">
-            <h1>Dataset</h1>
-        </div>
-        <div class="Datasets" id="DatasetsID">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero aliquid iste repudiandae non repellendus, tempora modi nulla praesentium eos debitis, minus optio nobis vel impedit hic! Pariatur aliquam sequi voluptas.</p>
-            <!--Search Bar Dataset-->
-            <div class="search">
-                <input type="text" class="search-bar" placeholder="Enter Municipality: ">
-                <input type="text" class="search-bar" placeholder="Enter Crop: ">
-                <input type="text" class="search-bar" placeholder="Enter Year: ">
-                <input type="text" class="search-bar" placeholder="Enter Yearly rain: ">
-                <input type="text" class="search-bar" placeholder="Enter Area: ">
-            </div>
-            <!--On click showing prediction data-->
-                <button onclick="myFunction()">Search</button>
-                <p id="demo"></p>
-                <script>
-                function myFunction() {
-                 document.getElementById("demo").innerHTML = "Sample Data: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra tellus in hac habitasse. Sit amet cursus sit amet dictum. Sapien pellentesque habitant morbi tristique. Faucibus et molestie ac feugiat sed lectus vestibulum mattis ullamcorper.";
-                }
-                </script>
-        </div>
 
     </div>
     </div>
