--- a/admin.html
+++ b/admin.html
@@ -21,9 +21,9 @@
         </a>
         <div class="navbar-links">
            <ul>
-               <li><a href="#HomeID" class="MMlist">Home</a></li>
-               <li><a href="#WeatherID" class="MMlist">Weather</a></li>
-               <li><a href="#CropsID" class="MMlist">Crops</a></li>
+               <li><a href="#" class="MMlist">Edit</a></li>
+               <li><a href="#" class="MMlist">Dataset</a></li>
+               <li><a href="#" class="MMlist">Forum</a></li>
            </ul>
         </div>
        </nav>
