--- a/Index.html
+++ b/Index.html
@@ -265,7 +265,7 @@
         <div class="footer">
             <p>© Project ANI 2021</p>
             <p>Made by the CITCS team</p>
-            <button onclick="document.getElementById('id01').style.display='block'" style="width:auto">Login</button>
+            <button onclick="document.getElementById('id01').style.display='block'" style="width:auto">ADMIN LOGIN</button>
             <div id="id01" class="modal">
   
                 <form class="modal-content animate" action="/action_page.php" method="post">
