--- a/Index.html
+++ b/Index.html
@@ -7,10 +7,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 	<link href="CSS/css.css" rel="stylesheet">
-    <!--Season Javascript-->
-    <script src="JS/Seasons.js" defer></script>
-    <!--Crops Javascript-->
-    <script src="JS/Crops.js" defer></script>
     <!--Weather Javascript-->
     <script src="JS/script.js" defer></script>
     <!--Donut Chart-->
@@ -120,20 +116,74 @@
         </div>
         <div class="Crop-Section">
             <div class="row1">
-                <button class="veggy"><img src="Images/cabbage1.png" width="150vw" height="130vh">
-                <h2>Cabbage</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <!--Cabbage Open The Modal -->
+                <button class="myBtn"><img src="Images/cabbage1.png" width="150vw" height="130vh">
+                    <h2>Cabbage</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
+                <!-- The Modal -->
+                <div id="myModal" class="modal">
+                <!-- Modal content -->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <span class="close">×</span>
+                            <h2>Modal Header</h2>
+                        </div>
+                        <div class="modal-body">
+                            <p>Some text in the Modal Body</p>
+                            <p>Some other text...</p>
+                        </div>
+                        <div class="modal-footer">
+                            <h3>Modal Footer</h3>
+                        </div>
+                    </div>
+                </div>
 
-                <button class="veggy"><img src="Images/chinese-cabbage.png" width="150vw" height="130vh">
-                <h2>Chinese Cabbage</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <!--Chinese Cabbage Trigger/Open The Modal -->
+                <button class="myBtn"><img src="Images/chinese-cabbage.png" width="150vw" height="130vh">
+                    <h2>Chinese Cabbage</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
+                <!-- The Modal -->
+                <div id="myModal2" class="modal">
+                <!-- Modal content -->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <span class="close">×</span>
+                            <h2>Modal Header</h2>
+                        </div>
+                        <div class="modal-body">
+                            <p>Some text in the Modal Body</p>
+                            <p>Some other text...</p>
+                        </div>
+                        <div class="modal-footer">
+                            <h3>Modal Footer</h3>
+                        </div>
+                    </div>
+                </div>
 
-                <button class="veggy"><img src="Images/lettuce.png" width="150vw" height="130vh">
-                <h2>Lettuce</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </button>
+                 <!--Lettuce Trigger/Open The Modal -->
+                 <button class="myBtn"><img src="Images/lettuce.png" width="150vw" height="130vh">
+                    <h2>Lettuce</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </button>    
+                <!-- The Modal -->
+                <div id="myModal3" class="modal">
+                <!-- Modal content -->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <span class="close">×</span>
+                            <h2>Modal Header</h2>
+                        </div>
+                        <div class="modal-body">
+                            <p>Some text in the Modal Body</p>
+                            <p>Some other text...</p>
+                        </div>
+                        <div class="modal-footer">
+                            <h3>Modal Footer</h3>
+                        </div>
+                    </div>
+                </div>
 
                 <button class="veggy"><img src="Images/cauliflower.png" width="150vw" height="130vh">
                 <h2>Cauliflower</h2>
@@ -144,6 +194,55 @@
                 <h2>Snap Beans</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
+
+                <script>
+                // Get the modal
+                var modal = document.getElementsByClassName('modal');
+
+                // Get the button that opens the modal
+                var btn = document.getElementsByClassName("myBtn");
+
+
+                // Get the <span> element that closes the modal
+                var span = document.getElementsByClassName("close");
+
+                // When the user clicks the button, open the modal 
+                btn[0].onclick = function() {
+                    modal[0].style.display = "block";
+                }
+
+                btn[1].onclick = function() {
+                    modal[1].style.display = "block";
+                }
+
+                btn[2].onclick = function() {
+                    modal[2].style.display = "block";
+                }
+                // When the user clicks on <span> (x), close the modal
+                span[0].onclick = function() {
+                    modal[0].style.display = "none";
+                }
+
+                span[1].onclick = function() {
+                    modal[1].style.display = "none";
+                }
+
+                span[2].onclick = function() {
+                    modal[2].style.display = "none";
+                }
+                // When the user clicks anywhere outside of the modal, close it
+                window.onclick = function(event) {
+                    if (event.target == modal[0]) {
+                        modal[0].style.display = "none";
+                    }
+                    if (event.target == modal[1]) {
+                        modal[1].style.display = "none";
+                    }  
+                    if (event.target == modal[2]) {
+                        modal[2].style.display = "none";
+                    }
+                }
+                </script>   
             </div>
 
             <div class="row2">
@@ -266,7 +365,7 @@
             <p>© Project ANI 2021</p>
             <p>Made by the CITCS team</p>
             <button onclick="document.getElementById('id01').style.display='block'" style="width:auto">ADMIN LOGIN</button>
-            <div id="id01" class="modal">
+            <div id="id01" class="modalfooter">
   
                 <form class="modal-content animate" action="/action_page.php" method="post">
                   <div class="imgcontainer">
@@ -300,15 +399,16 @@
         <!--Modal for admin login-->
         <script>
             // Get the modal
-            var modal = document.getElementById('id01');
+            var modalfooter = document.getElementById('id01');
             
             // When the user clicks anywhere outside of the modal, close it
             window.onclick = function(event) {
-                if (event.target == modal) {
+                if (event.target == modalfooter) {
                     modal.style.display = "none";
                 }
             }
-            </script>
+        </script>
+        
 
     </div>
     </div>
