--- a/Index.html
+++ b/Index.html
@@ -130,8 +130,9 @@
                             <h2>Cabbage</h2>
                         </div>
                         <div class="modal-body">
-                            <p>Some text in the Modal Body</p>
-                            <p>Some other text...</p>
+                            <p>Cabbage is a leafy green, red, or white biennial plant grown as an annual vegetable crop for its dense-leaved heads. It is descended from the wild cabbage, and belongs to the "cole crops" or brassicas, meaning it is closely related to broccoli and cauliflower; Brussels sprouts; and Savoy cabbage.</p>
+                            <br>
+                            <p>Grow cabbage in a well drained soil and rich in organic matter. Ideally, cabbage grows best in soil with pH ranging from 6.0-6.8. Apply agricultural lime when the soil is acidic or alkaline by broadcasting lime in the area two weeks before transplanting.</p>
                         </div>
                         <div class="modal-footer">
                             <h3>Modal Footer</h3>
@@ -239,7 +240,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
                 <!-- The Modal -->
-                <div id="myModal4" class="modal">
+                <div id="myModal6" class="modal">
                 <!-- Modal content -->
                     <div class="modal-content">
                         <div class="modal-header">
@@ -262,7 +263,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
                 <!-- The Modal -->
-                <div id="myModal4" class="modal">
+                <div id="myModal7" class="modal">
                 <!-- Modal content -->
                     <div class="modal-content">
                         <div class="modal-header">
@@ -285,7 +286,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
                 <!-- The Modal -->
-                <div id="myModal4" class="modal">
+                <div id="myModal8" class="modal">
                 <!-- Modal content -->
                     <div class="modal-content">
                         <div class="modal-header">
@@ -429,35 +430,143 @@
         </div>
         <div class="Season-Section">
             <div class="row1">
-                <button class="months"><img src="Images/january.png" width="150vw" height="130vh">
-                <h2>January</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <!--January Trigger/Open The Modal -->
+                <button class="myBtn-season"><img src="Images/january.png" width="150vw" height="130vh">
+                    <h2>January</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
+                <!-- The Modal -->
+                <div id="myModal9" class="modal-season">
+                <!-- Modal content -->
+                    <div class="modal-content-season">
+                        <div class="modal-header">
+                            <span class="close-season">×</span>
+                            <h2>January</h2>
+                        </div>
+                        <div class="modal-body">
+                            <p>Some text in the Modal Body</p>
+                            <p>Some other text...</p>
+                        </div>
+                        <div class="modal-footer">
+                            <h3>Modal Footer</h3>
+                        </div>
+                    </div>
+                </div> 
 
-                <button class="months"><img src="Images/february.png" width="150vw" height="130vh">
-                <h2>February</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <!--February Trigger/Open The Modal -->
+                <button class="myBtn-season"><img src="Images/february.png" width="150vw" height="130vh">
+                    <h2>February</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
+                <!-- The Modal -->
+                <div id="myModal9" class="modal-season">
+                <!-- Modal content -->
+                    <div class="modal-content-season">
+                        <div class="modal-header">
+                            <span class="close-season">×</span>
+                            <h2>February</h2>
+                        </div>
+                        <div class="modal-body">
+                            <p>Some text in the Modal Body</p>
+                            <p>Some other text...</p>
+                        </div>
+                        <div class="modal-footer">
+                            <h3>Modal Footer</h3>
+                        </div>
+                    </div>
+                </div>
 
-                <button class="months"><img src="Images/march.png" width="150vw" height="130vh">
-                <h2>March</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                 <!--March Trigger/Open The Modal -->
+                 <button class="myBtn-season"><img src="Images/march.png" width="150vw" height="130vh">
+                    <h2>March</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
+                <!-- The Modal -->
+                <div id="myModal9" class="modal-season">
+                <!-- Modal content -->
+                    <div class="modal-content-season">
+                        <div class="modal-header">
+                            <span class="close-season">×</span>
+                            <h2>March</h2>
+                        </div>
+                        <div class="modal-body">
+                            <p>Some text in the Modal Body</p>
+                            <p>Some other text...</p>
+                        </div>
+                        <div class="modal-footer">
+                            <h3>Modal Footer</h3>
+                        </div>
+                    </div>
+                </div>
 
-                <button class="months"><img src="Images/april.png" width="150vw" height="130vh">
-                <h2>April</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </button>
+                 <!--April Trigger/Open The Modal -->
+                 <button class="myBtn-season"><img src="Images/april.png" width="150vw" height="130vh">
+                    <h2>April</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </button>    
+                <!-- The Modal -->
+                <div id="myModal9" class="modal-season">
+                <!-- Modal content -->
+                    <div class="modal-content-season">
+                        <div class="modal-header">
+                            <span class="close-season">×</span>
+                            <h2>April</h2>
+                        </div>
+                        <div class="modal-body">
+                            <p>Some text in the Modal Body</p>
+                            <p>Some other text...</p>
+                        </div>
+                        <div class="modal-footer">
+                            <h3>Modal Footer</h3>
+                        </div>
+                    </div>
+                </div>
 
-                <button class="months"><img src="Images/may.png" width="150vw" height="130vh">
-                <h2>May</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <!--May Trigger/Open The Modal -->
+                <button class="myBtn-season"><img src="Images/may.png" width="150vw" height="130vh">
+                    <h2>May</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
+                <!-- The Modal -->
+                <div id="myModal9" class="modal-season">
+                <!-- Modal content -->
+                    <div class="modal-content-season">
+                        <div class="modal-header">
+                            <span class="close-season">×</span>
+                            <h2>May</h2>
+                        </div>
+                        <div class="modal-body">
+                            <p>Some text in the Modal Body</p>
+                            <p>Some other text...</p>
+                        </div>
+                        <div class="modal-footer">
+                            <h3>Modal Footer</h3>
+                        </div>
+                    </div>
+                </div>
 
-                <button class="months"><img src="Images/june.png" width="150vw" height="130vh">
-                <h2>June</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <!--June Trigger/Open The Modal -->
+                <button class="myBtn-season"><img src="Images/june.png" width="150vw" height="130vh">
+                    <h2>June</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
+                <!-- The Modal -->
+                <div id="myModal9" class="modal-season">
+                <!-- Modal content -->
+                    <div class="modal-content-season">
+                        <div class="modal-header">
+                            <span class="close-season">×</span>
+                            <h2>June</h2>
+                        </div>
+                        <div class="modal-body">
+                            <p>Some text in the Modal Body</p>
+                            <p>Some other text...</p>
+                        </div>
+                        <div class="modal-footer">
+                            <h3>Modal Footer</h3>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="row2">
@@ -490,8 +599,32 @@
                 <h2>December</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </button>
-            </div>
-            
+            </div>  
+            <script>
+                // Get the modal
+                var modalseason = document.getElementsByClassName('modal-season');
+
+                // Get the button that opens the modal
+                var btnseason = document.getElementsByClassName("myBtn-season");
+
+                // Get the <span> element that closes the modal
+                var spanseason = document.getElementsByClassName("close-season");
+
+                // When the user clicks the button, open the modal 
+                btnseason[0].onclick = function() {
+                    modalseason[0].style.display = "block";
+                }
+                // When the user clicks on <span> (x), close the modal
+                spanseason[0].onclick = function() {
+                    modalseason[0].style.display = "none";
+                }
+                // When the user clicks anywhere outside of the modal, close it
+                window.onclick = function(event) {
+                    if (event.target == modalseason[0]) {
+                        modalseason[0].style.display = "none";
+                    }
+                }   
+            </script>
         </div>
 
 
