--- a/Index.html
+++ b/Index.html
@@ -439,15 +439,15 @@
                 <div id="myModal9" class="modal-season">
                 <!-- Modal content -->
                     <div class="modal-content-season">
-                        <div class="modal-header">
+                        <div class="modal-header-season">
                             <span class="close-season">×</span>
                             <h2>January</h2>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body-season">
                             <p>Some text in the Modal Body</p>
                             <p>Some other text...</p>
                         </div>
-                        <div class="modal-footer">
+                        <div class="modal-footer-season">
                             <h3>Modal Footer</h3>
                         </div>
                     </div>
@@ -462,15 +462,15 @@
                 <div id="myModal9" class="modal-season">
                 <!-- Modal content -->
                     <div class="modal-content-season">
-                        <div class="modal-header">
+                        <div class="modal-header-season">
                             <span class="close-season">×</span>
                             <h2>February</h2>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body-season">
                             <p>Some text in the Modal Body</p>
                             <p>Some other text...</p>
                         </div>
-                        <div class="modal-footer">
+                        <div class="modal-footer-season">
                             <h3>Modal Footer</h3>
                         </div>
                     </div>
@@ -485,15 +485,15 @@
                 <div id="myModal9" class="modal-season">
                 <!-- Modal content -->
                     <div class="modal-content-season">
-                        <div class="modal-header">
+                        <div class="modal-header-season">
                             <span class="close-season">×</span>
                             <h2>March</h2>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body-season">
                             <p>Some text in the Modal Body</p>
                             <p>Some other text...</p>
                         </div>
-                        <div class="modal-footer">
+                        <div class="modal-footer-season">
                             <h3>Modal Footer</h3>
                         </div>
                     </div>
@@ -508,15 +508,15 @@
                 <div id="myModal9" class="modal-season">
                 <!-- Modal content -->
                     <div class="modal-content-season">
-                        <div class="modal-header">
+                        <div class="modal-header-season">
                             <span class="close-season">×</span>
                             <h2>April</h2>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body-season">
                             <p>Some text in the Modal Body</p>
                             <p>Some other text...</p>
                         </div>
-                        <div class="modal-footer">
+                        <div class="modal-footer-season">
                             <h3>Modal Footer</h3>
                         </div>
                     </div>
@@ -531,15 +531,15 @@
                 <div id="myModal9" class="modal-season">
                 <!-- Modal content -->
                     <div class="modal-content-season">
-                        <div class="modal-header">
+                        <div class="modal-header-season">
                             <span class="close-season">×</span>
                             <h2>May</h2>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body-season">
                             <p>Some text in the Modal Body</p>
                             <p>Some other text...</p>
                         </div>
-                        <div class="modal-footer">
+                        <div class="modal-footer-season">
                             <h3>Modal Footer</h3>
                         </div>
                     </div>
@@ -554,15 +554,15 @@
                 <div id="myModal9" class="modal-season">
                 <!-- Modal content -->
                     <div class="modal-content-season">
-                        <div class="modal-header">
+                        <div class="modal-header-season">
                             <span class="close-season">×</span>
                             <h2>June</h2>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body-season">
                             <p>Some text in the Modal Body</p>
                             <p>Some other text...</p>
                         </div>
-                        <div class="modal-footer">
+                        <div class="modal-footer-season">
                             <h3>Modal Footer</h3>
                         </div>
                     </div>
@@ -614,9 +614,49 @@
                 btnseason[0].onclick = function() {
                     modalseason[0].style.display = "block";
                 }
+
+                btnseason[1].onclick = function() {
+                    modalseason[1].style.display = "block";
+                }
+
+                btnseason[2].onclick = function() {
+                    modalseason[2].style.display = "block";
+                }
+
+                btnseason[3].onclick = function() {
+                    modalseason[3].style.display = "block";
+                }
+
+                btnseason[4].onclick = function() {
+                    modalseason[4].style.display = "block";
+                }
+
+                btnseason[5].onclick = function() {
+                    modalseason[5].style.display = "block";
+                }
                 // When the user clicks on <span> (x), close the modal
                 spanseason[0].onclick = function() {
                     modalseason[0].style.display = "none";
+                }
+
+                spanseason[1].onclick = function() {
+                    modalseason[1].style.display = "none";
+                }
+
+                spanseason[2].onclick = function() {
+                    modalseason[2].style.display = "none";
+                }
+
+                spanseason[3].onclick = function() {
+                    modalseason[3].style.display = "none";
+                }
+
+                spanseason[4].onclick = function() {
+                    modalseason[4].style.display = "none";
+                }
+
+                spanseason[5].onclick = function() {
+                    modalseason[5].style.display = "none";
                 }
                 // When the user clicks anywhere outside of the modal, close it
                 window.onclick = function(event) {
